tests/baselines/reference/unaryOperators1.errors.txt
unaryOperators1.ts(1,2): error TS2304: Cannot find name 'foo'.
unaryOperators1.ts(2,2): error TS2304: Cannot find name 'bar'.
unaryOperators1.ts(3,2): error TS2304: Cannot find name 'quux'.


==== unaryOperators1.ts (3 errors) ====
    +foo;
     ~~~
!!! error TS2304: Cannot find name 'foo'.
    -bar;
     ~~~
!!! error TS2304: Cannot find name 'bar'.
    ~quux;
     ~~~~
!!! error TS2304: Cannot find name 'quux'.